finished funtionality index page

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,6 +1,18 @@
 /* General Styles */
 
 
+body::-webkit-scrollbar {
+  @apply block w-2.5 h-2;
+}
+
+body::-webkit-scrollbar-thumb {
+  @apply bg-gray-300 rounded;
+}
+
+body::-webkit-scrollbar-track {
+  @apply bg-gray-200 rounded;
+}
+
 
 /* ----------------- Default styles ------- */
 
